--- a/web-applications/data-driven-app/package.json
+++ b/web-applications/data-driven-app/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.2.0"
   }
 }
