Added body parser

--- a/web-applications/data-driven-app/package.json
+++ b/web-applications/data-driven-app/package.json
@@ -11,6 +11,7 @@
   "author": "Andrew Lively <livelyar@ucmail.uc.edu>",
   "license": "Apache-2.0",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "knex": "^0.10.0"
