--- a/web-applications/data-driven-app/package.json
+++ b/web-applications/data-driven-app/package.json
@@ -11,14 +11,21 @@
   "author": "Andrew Lively <livelyar@ucmail.uc.edu>",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
+    "bookshelf": "^0.9.4",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "knex": "^0.10.0"
+    "knex": "^0.10.0",
+    "mariasql": "^0.2.6",
+    "mysql": "^2.10.2",
+    "pg": "^4.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0"
