--- a/web-applications/data-driven-app/package.json
+++ b/web-applications/data-driven-app/package.json
@@ -17,9 +17,11 @@
     "bookshelf": "^0.9.4",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "knex": "^0.10.0",
     "mariasql": "^0.2.6",
     "mysql": "^2.10.2",
+    "node-uuid": "^1.4.7",
     "pg": "^4.5.3"
   },
   "devDependencies": {
